--- a/volunteer.html
+++ b/volunteer.html
@@ -413,6 +413,7 @@
     <label for="validationDefault02">Last name</label>
     <input type="text" class="form-control" id="validationDefault02" placeholder="Last name" value required>
   </div>
+  <input type="hidden" name="_subject" value="New Email WOOO !! ">
   <div class="mb-3">
     <label for="validationDefaultEmail">Email</label>
     <input type="text" class="form-control" id="validationDefaultEmail" placeholder="Email Address" required>
