--- a/volunteer.html
+++ b/volunteer.html
@@ -404,7 +404,7 @@
 <!-- Wrapper container -->
 <div class="container py-4">
 
- <form action="https://formsubmit.co/ksoni@pharmamedica.com" method="POST" >
+ <form action="https://formsubmit.co/khushi11899@gmail.com" method="POST" >
   <div class="mb-3">
     <label for="validationDefault01">First name</label>
     <input type="text" class="form-control" id="validationDefault01" placeholder="First name" value required>
@@ -418,6 +418,7 @@
     <label for="validationDefaultEmail">Email</label>
     <input type="text" class="form-control" id="validationDefaultEmail" placeholder="Email Address" required>
   </div>
+  <input type="hidden" name="_next" value="https://github.com/Khushbu-soni0/PMRI/blob/main/volunteerlogin.html">
 
   <div class="mb-3">
     <label for="message">Message</label>
