--- a/volunteer.html
+++ b/volunteer.html
@@ -111,8 +111,9 @@
          <div class="col-md-6 text-center py-4">
           <h6 style="color: white;"> Never Registered with PMRI? <a style="color: #C2A35E; text-decoration: none; font-size: 18px;" href="https://www.epmri.com/signup">SIGN UP  <!-- <i class="fa fa-user-plus" aria-hidden="true"></i> --></a></h6>
         </div>
-        
+         <div style="color: white;">Once your registration is complete and approved by our recruiting team you will be able to Log in to check current studies that you might be qualified to join at PMRI </div>
       </div>
+      <br>
       <a class="btn btn-lg btn-block mybtn" href="readmore.html" >Discover</a>
     </div>  
   </div>
@@ -404,7 +405,8 @@
 <!-- Wrapper container -->
 <div class="container py-4">
 
- <form action="https://formsubmit.co/khushi11899@gmail.com" method="POST" >
+ <!-- <form action="https://formsubmit.co/khushi11899@gmail.com" method="POST" > -->
+  <form>
   <div class="mb-3">
     <label for="validationDefault01">First name</label>
     <input type="text" class="form-control" id="validationDefault01" placeholder="First name" value required>
@@ -425,13 +427,13 @@
     <textarea class="form-control" id="message" type="text" placeholder="Message" style="height: 10rem;" required></textarea>  
   </div>
 
-  <p id="thank-you-message">
+  <!-- <p id="thank-you-message">
    Thank you for your message, our recruiting team will contact you to help with your request.
- </p>
+ </p> -->
 
  <div class="text-center mb-3">
- <!--  <a href="mailto:info@pharmamedica.com?subject=Questions%20From Website" type="submit" class="btn btn-success btn-lg" value = "Subscribe">Send Message</a> -->
-   <button class="btn btn-success btn-lg" type="submit" value="Subscribe">Send Message</button> 
+  <a href="mailto:info@pharmamedica.com?subject=Questions%20From Website" type="submit" class="btn btn-success btn-lg" value = "Subscribe">Send Message</a>
+   <!-- <button class="btn btn-success btn-lg" type="submit" value="Subscribe">Send Message</button>  -->
 </div>
 </form>
 </div> 
