--- a/volunteer.html
+++ b/volunteer.html
@@ -111,7 +111,7 @@
          <div class="col-md-6 text-center py-4">
           <h6 style="color: white;"> Never Registered with PMRI? <a style="color: #C2A35E; text-decoration: none; font-size: 18px;" href="https://www.epmri.com/signup">SIGN UP  <!-- <i class="fa fa-user-plus" aria-hidden="true"></i> --></a></h6>
         </div>
-         <div style="color: white;">Once your registration is complete and approved by our recruiting team you will be able to Log in to check current studies that you might be qualified to join at PMRI </div>
+         <div style="color: white;">Once your sign up is complete and approved by our recruiting team, you will be able to Log in to check current studies that you might be qualified to join at PMRI and book accordingly.</div>
       </div>
       <br>
       <a class="btn btn-lg btn-block mybtn" href="readmore.html" >Discover</a>
@@ -119,7 +119,6 @@
   </div>
 </div>
 </div> 
-
 
 <!-- <div class="container pt-5">
   <div class="col-md-5 mx-auto">
